- Added the rest of supported loaders - WIP item additions